# extro

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  build.py  build.sh  pyproject.toml  requirements.txt
benchmarks/: README.md  benchmarker.py
benchmarks/animation/: __init__.py  report.md
benchmarks/instances/: __init__.py  report.md
benchmarks/physics/: __init__.py  report.md
engine/: Console.py  Signal.py  __init__.py
engine/animation/: Tween.py  __init__.py
engine/animation/easings/: __init__.py
engine/animation/lerp/: __init__.py  color.py  number.py  vector.py
engine/animation/lerpers/: __init__.py  color.py  number.py
engine/components/: Janitor.py  Signal.py  __init__.py
engine/instances/: AdvancedInstance.py  CollisionInstance.py  Instance.py  Part.py  Rectangle.py  __init__.py
engine/objects/: BaseObject.py  Rectangle.py  __init__.py
engine/services/: __init__.py  debris.py
engine/ui/: Button.py  Line.py  Text.py  __init__.py
engine/utils/: id.py  instance.py  types.py
examples/: README.md  button.py  camera_movement.py  camera_with_actions.py  collision.py  input.py  physics.py  physics_and_collisions.py  proximity_area.py  sin.py  square.py  text.py  tween.py
examples/animated_sprite/: __init__.py
examples/button_and_sound/: __init__.py
examples/game/: __init__.py
examples/sprite/: __init__.py
extro/: Console.py  Profiler.py  Window.py  __init__.py  __version__.py
extro/animation/lerp/: __init__.py  color.py  number.py  vector.py
extro/core/: Camera.py  Scene.py
extro/core/Instance/: Drawable.py  StaticDrawable.py  __init__.py
extro/core/components/: CollisionMask.pyi  CollisionMask.pyx  PhysicsBody.pxd  PhysicsBody.pyi  PhysicsBody.pyx
extro/instances/: __init__.py
extro/instances/audio/: Effect.py
extro/instances/ui/: Button.py  Font.py  Text.py  __ui__.py
extro/instances/ui/Fonts/: __init__.py
extro/instances/world/: PlayableCharacter.py  ProximityArea.py  Rectangle.py  TargetCamera.py
extro/instances/world/Sprite/: Animated.py  __init__.py
extro/internal/: Engine.py  InstanceManager.py
extro/internal/services/: ImageService.py
extro/internal/systems/: Animation.py  Audio.py  Collision.py  Input.py  Physics.pyi  Physics.pyx  Render.py
extro/internal/utils/: FileCache.py
extro/services/: CollisionGroup.py  Physics.py  Screen.py
extro/shared/: Coord.py  Vector2.pyi  Vector2.pyx
extro/utils/: InvalidationManager.py  Janitor.py  Signal.py  Timeout.py  __utils__.py
game/: __init__.py
src/: __init__.py  __version__.py  shared_types.py
src/animation/: Tween.py  __init__.py
src/animation/easings/: __init__.py
src/animation/lerp/: __init__.py  __init__.pyi  __init__.pyx  color.py  color.pyx  number.pyx  vector.py  vector.pyx
src/extro/: Console.py  Profiler.py  Window.cpp  Window.hpp  Window.py  __init__.py
src/extro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/extro/animation/: Tween.py  __animation__.py  __init__.py
src/extro/animation/easings/: __easings__.py  __init__.py  linear.py
src/extro/animation/lerp/: __init__.py  color.py  vector.py
src/extro/assets/: __assets__.py
src/extro/assets/Fonts/: __init__.py
src/extro/core/: AudioSource.py  Camera.py  Scene.py
src/extro/core/Instance/: Drawable.py  StaticDrawable.py  UI.py  __init__.py
src/extro/core/components/: Collider.py  CollisionMask.pyi  CollisionMask.pyx  PhysicsBody.pxd  PhysicsBody.pyi  PhysicsBody.pyx
src/extro/instances/: __instances__.py
src/extro/instances/audio/: Effect.py  Music.py  Spatial.py  __audio__.py
src/extro/instances/core/: Camera.py  RenderTarget.py  __core__.py
src/extro/instances/ui/: Button.py  Font.py  Frame.py  Image.py  Layer.py  Text.py  TextInput.py  __ui__.py
src/extro/instances/world/: PlayableCharacter.py  ProximityArea.py  Rectangle.py  Scene.py  TargetCamera.py  __world__.py
src/extro/internal/: ComponentManager.py  Engine.py  InstanceManager.py  sokol_implementation.cpp
src/extro/internal/services/: AudioService.py  FileCache.py  Identity.py  ImageService.py
src/extro/internal/systems/: Animation.py  Audio.py  Collision.py  Input.py  Physics.py  Physics.pyi  Physics.pyx  Render.py  Timing.py  Transform.py  UI.py
src/extro/internal/utils/: BitMask.py  FileCache.py  (+1 more)
src/extro/services/: Audio.py  CollisionGroup.py  Input.py  Physics.py  Render.py  Screen.py  Timing.py  World.py  __services__.py
src/extro/shared/: Angle.cpp  Angle.hpp  Angle.pyi  Color.cpp  Color.hpp  Color.pyi  Color.pyx  Coord.py  RGBAColor.cpp  RGBAColor.pyi  RGBAColorC.cpp  Vector2.cpp  Vector2.hpp  Vector2.pxd  Vector2.pyi  Vector2.pyx  Vector2C.cpp  Vector2C.pyi  __shared__.py  types.py
src/extro/utils/: InvalidationManager.py  Janitor.py  Signal.py  Timeout.py
src/instances/: Scene.py  __init__.py
src/instances/core/: BackgroundInstance.py  CollisionInstance.py  CollisionMask.cp313-win_amd64.pyd  CollisionMask.py  CollisionMask.pyi  CollisionMask.pyx  DrawableInstance.py  Instance.py  MeshInstance.py  Scene.py  StaticInstance.py
src/instances/ui/: Button.py  Text.py  __init__.py
src/instances/world/: Camera.py  Character.py  ProximityArea.py  Rectangle.py  Sprite.py  __init__.py
src/internal/: CollisionHandler.py  Console.py  Engine.py  IdentityHandler.py  InputHandler.py  InstanceHandler.py  Renderer.py  SceneHandler.py  Window.py  shared_types.py
src/internal/components/: DirtyUpdater.py  InvalidationManager.py  Janitor.py  Signal.py
src/internal/handlers/: CollisionHandler.py  InstanceManager.py  PhysicsHandler.py  Renderer.py
src/internal/helpers/: InvalidationManager.py  Janitor.py  Signal.py  Timeout.py  __init__.py
src/internal/services/: IdentityService.py  InputService.py  ScreenService.py  WorldService.py
src/values/: Color.cp313-win_amd64.pyd  Color.pyi  Color.pyx  Vector2.cp313-win_amd64.pyd  Vector2.pxd  Vector2.pyi  Vector2.pyx
tests/: button.py  collision.py  physics.py  proximity_area.py  sprite.py  square.py  text.py
tests/animated_sprite/: __init__.py
tests/game/: __init__.py
tests/sprite/: __init__.py
(+27 files in other folders)
