[build-system]
requires = [
    "nanobind>=2.9.2",
    "scikit-build>=0.18.1",
    "setuptools>=80.9.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "extro"
version = "0.9.2-alpha"
description = "A 2D game engine for Python, using Raylib for rendering."
authors = [{ name = "Landon Redmond" }]
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "raylib>=5.5.0.3"
]

[project.optional-dependencies]
dev = [
    "nanobind>=2.9.2",
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.package-data]
"extro.assets.Fonts" = ["*.ttf"]