[build-system]
requires = ["scikit-build-core>=0.11.6", "setuptools", "wheel", "nanobind>=2.9.2"]
build-backend = "scikit_build_core.build"

[project]
name = "extro"
version = "0.10.0-alpha"
description = "A 2D game engine for Python, using Raylib for rendering."
authors = [{ name = "Landon Redmond" }]
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    "raylib>=5.5.0.3"
]

[project.optional-dependencies]
dev = [
    "nanobind>=2.9.2",
    "build",
]

[tool.scikit-build]
build-dir = "build"
wheel.expand-macos-universal-tags = true
build.verbose = true
cmake.build-type = "Release"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.package-data]
"extro.assets.Fonts" = ["*.ttf"]